--- a/index.html
+++ b/index.html
@@ -3,20 +3,27 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>DPR Ian landing page</title>
+    <title>Tokyo Visiting Spots Recommendations</title>
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
       rel="stylesheet"
     />
     <link href="src/style.css" rel="stylesheet" />
   </head>
   <body>
-    <h1>DPR Ian</h1>
+    <div class="container">
+      <header>
+        <h3>.TRAVEL.</h3>
+        <h1>Welcome to Tokyo</h1>
+        <h2>Capital city of Japan</h2>
+        <a href="#more">Learn more</a>
+      </header>
+      <footer>
+        This project was coded by Bo Rutjes and is
+        <a href="https://github.com/Bosif/TokyoLandingPage">open sourced</a>
+      </footer>
+    </div>
   </body>
 </html>
