added the footer + styling

--- a/index.html
+++ b/index.html
@@ -20,10 +20,51 @@
         <h2>Capital city of Japan</h2>
         <a href="#more">Learn more</a>
       </header>
+
       <footer>
+        <section class="grid">
+        <div>
+          <h3>More about Tokyo</h3>
+          <ul>
+            <li>
+              <a href="https://www.narita-airport.jp/en/" target="_blank">
+                Tokyo Airport website
+              </a>
+            </li>
+            <li>
+              <a href="https://maps.app.goo.gl/fFX7TBEFSr5aAw83A" target="_blank">
+                Map of Tokyo
+              </a>
+            </li>
+            <li>
+              <a
+                href="https://www.tokyometro.jp/en/subwaymap/index.html"
+                target="_blank"
+              >
+                Public transport map
+              </a>
+            </li>
+          </ul>
+        </div>
+        <div>
+          <h3>About me</h3>
+          <p>
+            Hi! My name is Bo and I've always wanted to visit Tokyo. I admire
+            their nightlife and all the different neon lights that are displayed
+            all around the city. It creates such a beautiful aesthetic that really
+            speaks to me.
+          </p>
+        </div>
+        <div>
+          <h3>About this website</h3>
+          <p>
+            I created this webpage as part of a project for SheCodes Responsive to
+            develop and showcase my coding skills. <br/>
+          </p>
         This project was coded by Bo Rutjes and is
         <a href="https://github.com/Bosif/TokyoLandingPage">open sourced</a>
+      </div>
+      </section>
       </footer>
-    </div>
   </body>
 </html>
