created the first main section

--- a/index.html
+++ b/index.html
@@ -21,50 +21,87 @@
         <a href="#more">Learn more</a>
       </header>
 
+      <main>
+        <section class="grid grid-2-columns">
+          <div>
+            <img
+              src="src/images/intropic.jpg"
+              alt="tokyo street"
+              class="intropic img-responsive"
+            />
+          </div>
+          <div>
+            <h2>Why Tokyo?</h2>
+            <h3>Tokyo, endless discovery</h3>
+            <p>
+              Tokyo's history is a tale of transformation and resilience.
+              Originally a modest fishing village named Edo, it rose to
+              prominence during the Tokugawa shogunate, evolving into Japan's de
+              facto capital and a bustling center of trade and culture. Renamed
+              Tokyo during the Meiji Restoration in the late 19th century, the
+              city underwent rapid modernization, embracing Western influences
+              and becoming the heart of Japan's imperial expansion.
+            </p>
+            <p>
+              The city rapidly rebuilt itself after world war II, showcasing its
+              resilience and determination to thrive. Today, Tokyo stands as a
+              global metropolis, renowned for its innovation, cultural richness,
+              and vibrant energy that characterizes contemporary Japan.
+            </p>
+          </div>
+        </section>
+      </main>
+
       <footer>
-        <section class="grid">
-        <div>
-          <h3>More about Tokyo</h3>
-          <ul>
-            <li>
-              <a href="https://www.narita-airport.jp/en/" target="_blank">
-                Tokyo Airport website
-              </a>
-            </li>
-            <li>
-              <a href="https://maps.app.goo.gl/fFX7TBEFSr5aAw83A" target="_blank">
-                Map of Tokyo
-              </a>
-            </li>
-            <li>
-              <a
-                href="https://www.tokyometro.jp/en/subwaymap/index.html"
-                target="_blank"
+        <section class="grid grid-3-columns-first-narrow">
+          <div>
+            <h3>More about Tokyo</h3>
+            <ul>
+              <li>
+                <a href="https://www.narita-airport.jp/en/" target="_blank">
+                  Tokyo Airport website
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://maps.app.goo.gl/fFX7TBEFSr5aAw83A"
+                  target="_blank"
+                >
+                  Map of Tokyo
+                </a>
+              </li>
+              <li>
+                <a
+                  href="https://www.tokyometro.jp/en/subwaymap/index.html"
+                  target="_blank"
+                >
+                  Public transport map
+                </a>
+              </li>
+            </ul>
+          </div>
+          <div>
+            <h3>About me</h3>
+            <p>
+              Hi! My name is Bo and I've always wanted to visit Tokyo. <br />I
+              admire their nightlife and all the different neon lights that are
+              displayed all around the city. It creates such a beautiful
+              aesthetic that really speaks to me.
+            </p>
+          </div>
+          <div>
+            <h3>About this website</h3>
+            <p>
+              I created this webpage as part of a project for SheCodes
+              Responsive to develop and showcase my coding skills. <br />
+              This project was coded by Bo Rutjes and is
+              <a href="https://github.com/Bosif/TokyoLandingPage"
+                >open sourced</a
               >
-                Public transport map
-              </a>
-            </li>
-          </ul>
-        </div>
-        <div>
-          <h3>About me</h3>
-          <p>
-            Hi! My name is Bo and I've always wanted to visit Tokyo. I admire
-            their nightlife and all the different neon lights that are displayed
-            all around the city. It creates such a beautiful aesthetic that really
-            speaks to me.
-          </p>
-        </div>
-        <div>
-          <h3>About this website</h3>
-          <p>
-            I created this webpage as part of a project for SheCodes Responsive to
-            develop and showcase my coding skills. <br/>
-          </p>
-        This project was coded by Bo Rutjes and is
-        <a href="https://github.com/Bosif/TokyoLandingPage">open sourced</a>
-      </div>
-      </section>
+            </p>
+          </div>
+        </section>
       </footer>
+    </div>
   </body>
 </html>
