added link to button

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
         <h3>.TRAVEL.</h3>
         <h1>Welcome to Tokyo</h1>
         <h2>Capital city of Japan</h2>
-        <a href="#more">Learn more</a>
+        <a href="https://en.wikipedia.org/wiki/Tokyo" target="_blank"
+          >Learn more</a
+        >
       </header>
 
       <main>
