changed information paragraph

--- a/index.html
+++ b/index.html
@@ -45,10 +45,13 @@
               and becoming the heart of Japan's imperial expansion.
             </p>
             <p>
-              The city rapidly rebuilt itself after world war II, showcasing its
-              resilience and determination to thrive. Today, Tokyo stands as a
-              global metropolis, renowned for its innovation, cultural richness,
-              and vibrant energy that characterizes contemporary Japan.
+              However, Tokyo's trajectory was disrupted by the devastation of
+              World War II, particularly the firebombing raids in 1945 that left
+              much of the city in ruins. The city rapidly rebuilt itself,
+              showcasing its resilience and determination to thrive. Today,
+              Tokyo stands as a global metropolis, renowned for its innovation,
+              cultural richness, and vibrant energy that characterizes
+              contemporary Japan.
             </p>
           </div>
         </section>
