added the second section

--- a/index.html
+++ b/index.html
@@ -55,6 +55,120 @@
             </p>
           </div>
         </section>
+
+        <section class="secondary">
+          <h2 class="text-center">restaurants</h2>
+          <h3 class="text-center">Popular restaurants in Tokyo</h3>
+
+          <div class="grid grid-3-columns">
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="src/images/restaurant1.jpg"
+                  alt="Omotesando Ukai Tei Restaurant"
+                  class="img-responsive card-img"
+                />
+              </div>
+
+              <div class="card-body">
+                <h4>Omotesando Ukai Tei</h4>
+                <p>
+                  The restaurant has an atmosphere where art-nouveau and
+                  Japanese style meet, and it is just like a museum. All private
+                  rooms are equipped with hot griddles, where your dedicated
+                  chef cooks in front of you. You can overlook Omotesando Street
+                  from the fully encased glass counter seats.
+                </p>
+                <h5>Address:</h5>
+                <p>Shibuya City</p>
+                <h5>What I like about it</h5>
+                <p>
+                  Omotesando Ukai Tei is a foodie's dream, serving up top-notch
+                  sushi and Wagyu beef dishes that are bursting with flavor.
+                  It's a must-visit spot for anyone craving good food.
+                </p>
+              </div>
+              <div class="div card-footer">
+                <a
+                  href="https://www.ukai.co.jp/english/omotesando/"
+                  target="_blank"
+                  class="btn"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="src/images/restaurant2.jpg"
+                  alt="NOBU Tokyo"
+                  class="img-responsive card-img"
+                />
+              </div>
+              <div class="card-body">
+                <h4>NOBU</h4>
+                <p>
+                  Nobu Tokyo offers a sophisticated dining experience, blending
+                  traditional Japanese cuisine with innovative twists. It has
+                  elegant decor, impeccable service, and a menu featuring
+                  signature dishes, making it a destination for discerning
+                  diners seeking a memorable culinary adventure.
+                </p>
+                <h5>Address:</h5>
+                <p>Minato City</p>
+                <h5>What I like about it</h5>
+                <p>
+                  Nobu Tokyo combines Chef Nobu's innovative dishes with elegant
+                  ambiance, offering a memorable dining experience in Tokyo,
+                  albeit at a higher price point.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://noburestaurants.com/tokyo/home"
+                  target="_blank"
+                  class="btn"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+            <div class="card">
+              <div class="card-header">
+                <img
+                  src="src/images/restaurant3.jpg"
+                  alt="NOBU Tokyo"
+                  class="img-responsive card-img"
+                />
+              </div>
+              <div class="card-body">
+                <h4>Kozue</h4>
+                <p>
+                  Kozue restaurant in Tokyo offers a refined dining experience,
+                  focusing on authentic Japanese cuisine with a modern twist.
+                  Set against the backdrop of stunning city views, its elegant
+                  ambiance and meticulous attention to detail make it a standout
+                  destination for those seeking elevated Japanese dining.
+                </p>
+                <h5>Address:</h5>
+                <p>Shinjuku City</p>
+                <h5>What I like about it</h5>
+                <p>
+                  It offers a captivating fusion of traditional Japanese cuisine
+                  with modern flair, set against stunning city views, making it
+                  a must-visit for a memorable dining experience.
+                </p>
+              </div>
+              <div class="card-footer">
+                <a
+                  href="https://restaurants.tokyo.park.hyatt.co.jp/en/koz.html"
+                  target="_blank"
+                  class="btn"
+                  >Learn more</a
+                >
+              </div>
+            </div>
+          </div>
+        </section>
       </main>
 
       <footer>
